--- a/public/controls.css
+++ b/public/controls.css
@@ -3,22 +3,30 @@
     width:100%;
     height:100%;
     border: 3px solid green;
-
+    padding:20px;
+    margin: 10px 0;
 }
 
 .dialBox{
     height:450px;
     width:310px;
-    border: 3px solid rgba(150,100,150,255);
+    padding:20px;
+    margin:10px;
+    border: 3px solid purple;
     border-radius: 5px;
     display:inline-block;
     position:relative;
+
 }
 
 .knob{
-    height:300px;
-    width:300px;
-    border-radius: 50%;
-    border: 3px dashed yellow;
+background-image: radial-gradient(center, ellipse cover, #e4f5fc 0%, #00b3f9 24%, #bfe8f9 41%, #9fd8ef 58%, #e4f5fc 79%, #2ab0ed 100%); /* FF3.6+ */
+background-image: -webkit-linear-gradient(45deg, rgba(230,287,153,0.6) 0%,rgba(30,87,153,0.6) 15%,rgba(30,87,153,0.6) 20%,rgba(41,137,216,0.6) 50%,rgba(30,87,153,0.6) 80%,rgba(30,87,153,0.6) 85%,rgba(30,87,153,0.6) 100%), -webkit-linear-gradient(55deg, rgba(30,87,153,1) 0%,rgba(30,87,153,0.8) 15%,rgba(30,87,153,0.8) 20%,rgba(41,137,216,0.8) 50%,rgba(30,87,153,0.8) 80%,rgba(30,87,153,0.8) 85%,rgba(30,87,153,1) 100%); 
 
+    height:310px;
+    width:310px;
+    border-radius: 50%;
+    border: 11px solid black;
+    box-shadow:  0 0 33px black inset;
+    box-sizing: border-box;
 }
