--- a/public/controls.css
+++ b/public/controls.css
@@ -1,5 +1,5 @@
 #controls{
-
+    
     width:100%;
     height:100%;
     border: 3px solid rgba(111,111,111,.5);
@@ -28,7 +28,7 @@
 .switchBox{
   height:70px;
   width:70px;
-  display:inline-block;
+  display:inline;
   position:relative;
   margin:7px;
 }
