--- a/public/style.css
+++ b/public/style.css
@@ -1,77 +1,14 @@
-html, body{
+html{
   height: 100%;
-  cursor:pointer;
-}
-::-webkit-input-placeholder{
-    font-weight:900;
 }
 
-body, canvas, div{
-    margin:0px;
-    padding:0px;  
-    user-select: none;
-}
-
-textarea {
-    border-bottom-color: rgb(238, 238, 238);
-    border-bottom-style: inset;
-    border-bottom-width: 1.8181817531585693px;
-    border-left-color: rgb(238, 238, 238);
-    border-left-style: inset;
-    border-left-width: 1.8181817531585693px;
-    border-right-color: rgb(238, 238, 238);
-    border-right-style: inset;
-    border-right-width: 1.8181817531585693px;
-    border-top-color: rgb(238, 238, 238);
-    border-top-style: inset;
-    border-top-width: 1.8181817531585693px;
+body {
+  height:100vh;
   margin: 0;
-  padding: 5px;
-  width: 100%;
-  height: 100%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 
-input{
-  width: 100%;
-  height: 100%;
-}
 
-label{
-  padding:0;
-  margin:0;
-  height:100%;
-  width:100%;
-}
 
-legend {
-  padding: 0 5px;
-  margin: 0 0 0 3px;
-}
-
-fieldset{
-}
-
-input[type=file]{
-  padding:5px 0px;
-}
-
-button {
-  margin: 0px
-}
-
-.w350{
-  display:inline-block;
-  width:350px
-}
-
-.w300{
-  max-width:300px
-}
-
-.h400{
-  min-height:300px
-}
-
-.m5{
-  margin: 5px
-}
