--- a/public/style.css
+++ b/public/style.css
@@ -3,11 +3,15 @@ html{
 }
 
 body {
-  height:100vh;
+  height:100%;
+  width:100%;
   margin: 0;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+  padding:0;
+}
+
+div{
+  margin: 0;
+  padding:0;
 }
 
 
