--- a/module.css
+++ b/module.css
@@ -1,10 +1,10 @@
 .module{
   width:100%;
-  height100%;
+  height:100%;
 }
 
 .module > div {
-  margin: 11px 0;
+  margin: 11px;
 }
 
 .dial{
@@ -14,13 +14,14 @@
   height:200px;
   border-radius: 50%;
   border: 7px solid black;
-  border-top: 7px solid yellow;
+  border-top: 7px solid white;
+  box-shadow: inset 0px 1px 3px black, 0px 0px 6px black;
 }
 
 .amod{
   margin: 0;
   padding: 0;
-  width: 400px;
+  width: 200px;
   height: 200px;
   box-sizing: border-box;
 }
