--- a/module.css
+++ b/module.css
@@ -18,7 +18,7 @@
   box-shadow: inset 0px 1px 3px black, 0px 0px 6px black;
 }
 
-.amod{
+.amod, .env, .eezy, .bezier, .adsr{
   margin: 0;
   padding: 0;
   width: 300px;
